# notorious_beeg

./: .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CONTRIBUTING.md  README.md  browserconfig.xml  index.data  index.html  index.js  index.wasm  index.worker.js  netlify.toml  vcpkg.json
.github/workflows/: build_pc.yml  ctest.yml  deploy_netfliy.yml  deploy_netlify.yml  deploy_pages.yml  deploy_web.yml
assets/web/: README.md  browserconfig.xml  site.webmanifest
cmake/toolchain/: n64.cmake
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  bios.cpp  bios.hpp  bios_hle.cpp  bios_hle.hpp  bit.hpp  dma.cpp  dma.hpp  fwd.hpp  gba.cpp  gba.hpp  gpio.cpp  gpio.hpp  key.cpp  key.hpp  log.cpp  log.hpp  logger.hpp  mem.cpp  mem.hpp  ppu.cpp  ppu.hpp  rtc.cpp  rtc.hpp  scheduler.cpp  scheduler.hpp  single.cpp  sio.cpp  sio.hpp  timer.cpp  timer.hpp  waitloop.cpp  waitloop.hpp
src/core/apu/: apu.cpp  apu.hpp
src/core/arm7tdmi/: arm7tdmi.cpp  arm7tdmi.hpp  barrel_shifter.hpp  helper.hpp
src/core/arm7tdmi/arm/: arm.cpp  arm.hpp  arm_goto.cpp  arm_switch.cpp  arm_table.cpp  block_data_transfer.cpp  branch.cpp  branch_and_exchange.cpp  data_processing.cpp  halfword_data_transfer.cpp  instructions.hpp  mrs.cpp  msr.cpp  multiply.cpp  multiply_long.cpp  single_data_swap.cpp  single_data_transfer.cpp  software_interrupt.cpp
src/core/arm7tdmi/thumb/: add_offset_to_stack_pointer.cpp  add_subtract.cpp  alu_operations.cpp  conditional_branch.cpp  hi_register_operations.cpp  instructions.hpp  load_address.cpp  load_store_halfword.cpp  load_store_sign_extended_byte_halfword.cpp  load_store_with_immediate_offset.cpp  load_store_with_register_offset.cpp  long_branch_with_link.cpp  move_compare_add_subtract_immediate.cpp  move_shifted_register.cpp  multiple_load_store.cpp  pc_relative_load.cpp  push_pop_registers.cpp  software_interrupt.cpp  sp_relative_load_store.cpp  thumb.cpp  thumb.hpp  thumb_goto.cpp  thumb_switch.cpp  thumb_table.cpp  unconditional_branch.cpp
src/core/backup/: backup.cpp  backup.hpp  eeprom.cpp  eeprom.hpp  flash.cpp  flash.hpp  sram.cpp  sram.hpp
src/core/fat/: ezflash.cpp  ezflash.hpp  fat.cpp  fat.hpp  m3cf.cpp  m3cf.hpp  m3sd.cpp  m3sd.hpp  mpcf.cpp  mpcf.hpp  sccf.cpp  sccf.hpp  scsd.cpp  scsd.hpp
src/core/fat/ezflash/: S71GL064A08.cpp  S71GL064A08.hpp  S98WS512PE0.cpp  S98WS512PE0.hpp
src/core/gameboy/: bus.cpp  cpu.cpp  gb.cpp  gb.hpp  internal.hpp  joypad.cpp  mbc.cpp  mbc.hpp  palette_table.cpp  palette_table.hpp  timers.cpp  types.hpp
src/core/gameboy/ppu/: dmg_renderer.cpp  gbc_renderer.cpp  ppu.cpp  ppu.hpp
src/core/ppu/: ppu.cpp  ppu.hpp  render.cpp  render.hpp
src/frontend/: CMakeLists.txt  frontend_base.cpp  frontend_base.hpp  icon.hpp  main.cpp  system.cpp  system.hpp  trim_font.hpp
src/frontend/backend/: CMakeLists.txt  backend.hpp
src/frontend/backend/nx/: CMakeLists.txt  backend_nx.cpp  fs.cpp  fs.hpp
src/frontend/backend/nx/audio/: audio.cpp  audio.hpp
src/frontend/backend/nx/ftpd_imgui/: imgui_nx.cpp  imgui_nx.h
src/frontend/backend/sdl2/: CMakeLists.txt  backend_sdl2.cpp  backend_sdl2.hpp
src/frontend/benchmark/: CMakeLists.txt  main.cpp
src/frontend/debugger/: io.cpp  io.hpp
src/frontend/emscripten/: CMakeLists.txt  README.md  emscripten.html  main.cpp
src/frontend/imgui/: CMakeLists.txt  debugger_io.cpp  debugger_io.hpp  debugger_io_gb.cpp  debugger_io_gba.cpp  imgui_base.cpp  imgui_base.hpp  imgui_log.cpp  imgui_log.hpp
src/frontend/imgui/backend/: CMakeLists.txt
src/frontend/imgui/backend/glad/: CMakeLists.txt  glad.c
src/frontend/imgui/backend/glad/glad/: glad.h
src/frontend/imgui/backend/sdl2/: CMakeLists.txt  gl1_renderer.cpp  gl1_renderer.hpp  main.cpp  sdl2_gl_renderer.cpp  sdl2_gl_renderer.hpp  sdl2_renderer.cpp  sdl2_renderer.hpp
src/frontend/n64/: CMakeLists.txt  main.cpp
src/frontend/sdl2/: CMakeLists.txt  main.cpp
src/frontend/sdl2_base/: CMakeLists.txt  sdl2_base.cpp  sdl2_base.hpp
src/tests/: CMakeLists.txt  README.md  test_framework.cpp  timer_test.cpp
src/tests/roms_and_output/hw-test/: LICENSE
